--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^11.11.17",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
