--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-router-dom": "^7.0.0"
   },
   "devDependencies": {
