--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap-buttons": "^1.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.0"
   },
   "devDependencies": {
