--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT=5000
+CLIENT_URL=http://localhost:5173
 MONGODB_URI=mongodb://localhost:27017/
 MONGODB_DATABASE=404notbooks
+AUTH_SECRET=9X8f/hXA6eHQ7W9aHjtzdKJRkMvVSYFG0KRyBVJU1rU=
